--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   
     overflow: overlay;
 
-    background-image: url("./assets/Videos-Milionarios-â€“-Videos-Milionarios2222-01.jpg.jpg");
+    background-image: url("./assets/Videos-Milionarios-–-Videos-Milionarios2222-01.jpg");
   }
   
   ul {
